<resources>
    <string name="app_name">UniHelp</string>
    <string name="database_url">https://unihelp-database.herokuapp.com/</string>

    <!--  LoginActivity  -->
    <string name="et_hint_email">Education Email</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_login">Login</string>

    <!-- Bottom Navigation Menu -->
    <string name="bn_schedule">Schedule</string>
    <string name="bn_courses">Courses</string>
    <string name="bn_reservation">Reservation</string>

    <!--  Reservation  -->
    <string name="location_name">Name</string>
    <string name="location_fac">Faculty</string>
    <string name="location_reserve_count">0</string>
    <string name="drawer_logout">Logout</string>

    <!--  Schedule  -->
    <string name="schedule_item_title">Title</string>
    <string name="schedule_item_description">Item Description</string>

    <!--  RoomDetail  -->
    <string name="btn_book">Book the room</string>
    <string name="date">00-Mmm-yyyy</string>
    <string name="time_ph">HH:00 XX</string>
    <string name="date_day">00</string>
    <string name="date_month">Mmm</string>
    <string name="date_weekday">Weekday</string>
    <string name="btn_desc">arrow</string>
    <string name="time">H XX</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <!--CourseDetail-->
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="faculty">Faculty</string>
    <string name="course_credit">0</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="course_rating">0.0</string>
    <string name="course_reviews">0 reviews</string>
    <string name="course_capacity">0</string>
    <string name="maximum_capacity">Maximum Capacity</string>
    <string name="course_seats">0</string>
    <string name="seats_available">Seats Available</string>
    <string name="course_taken">0</string>
    <string name="taken_this_course">Taken this course</string>
    <string name="course_detail_button">Button</string>
    <string name="course_description">Course Description</string>
    <string name="course_tab"><![CDATA[>]]></string>
    <string name="description">Description</string>
    <string name="instructors">Instructors</string>
    <string name="groups">Groups</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>

</resources>

