<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.course.activities.CourseDetailsActivity">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/courseCode"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_code" />

        <TextView
            android:id="@+id/courseName"
            style="@style/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_name" />

        <TextView
            android:id="@+id/faculty"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/credit"
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_credit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallItalic"
                    android:text="@string/credit_hours" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ratingStat"
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_rating" />

                <TextView
                    android:id="@+id/reviewsStat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallItalic"
                    android:text="@string/course_reviews" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/capacity"
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_capacity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallItalic"
                    android:text="@string/maximum_capacity" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seats"
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_seats" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallItalic"
                    android:text="@string/seats_available" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/taken"
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_taken" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallItalic"
                    android:text="@string/taken_this_course" />
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/buttonPrimary"
            android:layout_marginTop="16dp"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_detail_button" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/courseDescriptionTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/textPrimarySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_description" />

                <TextView
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_tab" />
            </LinearLayout>

            <TextView
                style="@style/textRegular"
                android:id="@+id/courseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/courseInstructorTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/textPrimarySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instructors" />

                <TextView
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_tab" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseInstructorsSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/courseGroupTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/textPrimarySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/groups" />

                <TextView
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_tab" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseGroupsSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/courseRatingTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textPrimarySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ratings_and_reviews" />

                <TextView
                    style="@style/textSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_tab" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textSecondary"
                        android:textSize="32sp"
                        android:id="@+id/ratingStat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/course_rating" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/ratingBarSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        style="@style/textSmallItalic"
                        android:id="@+id/reviewsStat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/course_reviews" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textSmall"
                            android:layout_marginRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_5" />

                        <ProgressBar
                            android:id="@+id/progressBar5"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textSmall"
                            android:layout_marginRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4" />

                        <ProgressBar
                            android:id="@+id/progressBar4"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textSmall"
                            android:layout_marginRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3" />

                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textSmall"
                            android:layout_marginRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2" />

                        <ProgressBar
                            android:id="@+id/progressBar2"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="100" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textSmall"
                            android:layout_marginRight="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1" />

                        <ProgressBar
                            android:id="@+id/progressBar1"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="100" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>