<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.reservation.activities.RoomDetailActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            style="@style/textPrimary"
            android:text="@string/location_name" />

        <TextView
            android:id="@+id/detail_fac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            style="@style/textRegular"
            android:text="@string/location_fac"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/detail_dec_date"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:padding="20dp"
                android:scaleType="fitXY"
                android:alpha="0.6"
                android:contentDescription="@string/btn_desc"
                android:background="@android:color/transparent"
                android:src="@drawable/left_arrow"/>

            <LinearLayout
                android:id="@+id/detail_select_date"
                android:background="@drawable/edit_text_border"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_width="76dp"
                android:layout_height="76dp">

                <TextView
                    android:id="@+id/detail_date_weekday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/date_weekday"/>

                <TextView
                    android:id="@+id/detail_date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:fontFamily="@font/roboto_black"
                    android:textSize="20sp"
                    android:text="@string/date_day"/>

                <TextView
                    android:id="@+id/detail_date_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    android:text="@string/date_month"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/detail_inc_date"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:rotation="180"
                android:scaleType="fitXY"
                android:alpha="0.6"
                android:contentDescription="@string/btn_desc"
                android:background="@android:color/transparent"
                android:src="@drawable/left_arrow"/>

        </LinearLayout>

        <ListView
            android:id="@+id/detail_timeline"
            android:layout_width="match_parent"
            android:layout_height="610dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:listSelector="@android:color/transparent" >

        </ListView>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/roboto_regular"
                app:layout_constraintLeft_toLeftOf="@id/from_time"
                app:layout_constraintBottom_toTopOf="@id/from_time"
                android:textSize="18sp"
                android:textColor="@color/sea_blue"
                android:text="@string/from"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/roboto_regular"
                app:layout_constraintLeft_toLeftOf="@id/to_time"
                app:layout_constraintBottom_toTopOf="@id/to_time"
                android:textSize="18sp"
                android:textColor="@color/sea_blue"
                android:text="@string/to"/>

            <EditText
                android:id="@+id/from_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/to_time"
                android:focusable="false"
                android:textColor="@color/dark_gray"
                android:background="@null"
                app:fontFamily="@font/roboto_regular"
                android:text="@string/time_ph"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/to_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/from_time"
                android:focusable="false"
                android:textColor="@color/dark_gray"
                android:background="@null"
                app:fontFamily="@font/roboto_regular"
                android:text="@string/time_ph"
                android:textSize="24sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/detail_book"
            style="@style/buttonPrimary"
            android:layout_margin="18dp"
            android:text="@string/btn_book" />

    </LinearLayout>
</ScrollView>
