<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:src="@mipmap/home"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="0.8"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/roboto_light"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:text="@string/location_name" />

        <TextView
            android:id="@+id/location_fac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/robotocondensed_lightitalic"
            android:textColor="@color/sea_blue"
            android:textSize="14sp"
            android:text="@string/location_fac" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location_reserve_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                app:fontFamily="@font/robotocondensed_regular"
                android:textSize="12sp"
                android:text="@string/location_reserve_count" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>